Alterado caminho para ícones

--- a/index.html
+++ b/index.html
@@ -28,31 +28,31 @@
 
       <div class="links">
         <div class="color">
-          <img src="./assets_projeto9/map-pin.svg" /> Brasil
+          <img src="./assets/map-pin.svg" /> Brasil
         </div>
 
         <div class="color">
-          <img src="./assets_projeto9/briefcase.svg" /> Rocketseat
+          <img src="./assets/briefcase.svg" /> Rocketseat
         </div>
 
         <div class="color">
-          <img src="./assets_projeto9/github.svg" /> KarineBrandelli
+          <img src="./assets/github.svg" /> KarineBrandelli
         </div>
 
         <div class="color">
-          <img src="./assets_projeto9/linkedin.svg" /> Karine-Brandelli-Padilha
+          <img src="./assets/linkedin.svg" /> Karine-Brandelli-Padilha
         </div>
 
         <div class="color">
-          <img src="./assets_projeto9/twitter.svg" /> kabrandelli
+          <img src="./assets/twitter.svg" /> kabrandelli
         </div>
 
         <div class="color">
-          <img src="./assets_projeto9/globe.svg" /> https://karinebrandelli.dev
+          <img src="./assets/globe.svg" /> https://karinebrandelli.dev
         </div>
 
         <div class="color">
-          <img src="./assets_projeto9/mail.svg" /> karinebrandelli@live.com
+          <img src="./assets/mail.svg" /> karinebrandelli@live.com
         </div>
       </div>
 
@@ -102,7 +102,7 @@
       <div class="sections">
         <section class="section-esquerda">
           <div class="my-onix">
-            <img src="./assets_projeto9/folder.svg" /> my-onix
+            <img src="./assets/folder.svg" /> my-onix
           </div>
 
           <div class="consulte">
@@ -111,9 +111,9 @@
 
           <div class="items">
             <div class="sub-items">
-              <img src="./assets_projeto9/star.svg" /> 100
+              <img src="./assets/star.svg" /> 100
 
-              <img src="./assets_projeto9/git-branch.svg" /> 100
+              <img src="./assets/git-branch.svg" /> 100
             </div>
 
             <div class="js">JavaScript</div>
@@ -122,7 +122,7 @@
 
         <section class="section-direita">
           <div class="my-onix">
-            <img src="./assets_projeto9/folder.svg" /> my-onix
+            <img src="./assets/folder.svg" /> my-onix
           </div>
 
           <div class="consulte">
@@ -131,9 +131,9 @@
 
           <div class="items">
             <div class="sub-items">
-              <img src="./assets_projeto9/star.svg" /> 100
+              <img src="./assets/star.svg" /> 100
 
-              <img src="./assets_projeto9/git-branch.svg" /> 100
+              <img src="./assets/git-branch.svg" /> 100
             </div>
 
             <div class="js">JavaScript</div>
